[gd_scene load_steps=10 format=3 uid="uid://ch5nhx35f6sqe"]

[ext_resource type="Texture2D" uid="uid://mctnw50djjpj" path="res://ui/button_9patch.png" id="1_edav0"]
[ext_resource type="Script" path="res://ui/inventory/inventory.gd" id="1_ssgm0"]
[ext_resource type="Texture2D" uid="uid://bahin0qx4l8mt" path="res://ui/panel_9patch.png" id="2_6qq5g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fevhc"]
texture = ExtResource("1_edav0")
texture_margin_left = 7.0
texture_margin_top = 8.0
texture_margin_right = 6.0
texture_margin_bottom = 7.0
region_rect = Rect2(0, 0, 47, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f7ur3"]
texture = ExtResource("2_6qq5g")
texture_margin_left = 26.0
texture_margin_top = 26.0
texture_margin_right = 25.0
texture_margin_bottom = 25.0

[sub_resource type="Theme" id="Theme_s5fpq"]
Button/font_sizes/font_size = 14
Button/styles/focus = SubResource("StyleBoxTexture_fevhc")
Button/styles/hover = SubResource("StyleBoxTexture_fevhc")
Button/styles/normal = SubResource("StyleBoxTexture_fevhc")
Button/styles/pressed = SubResource("StyleBoxTexture_fevhc")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_f7ur3")

[sub_resource type="Gradient" id="Gradient_mkupp"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j5nwq"]
frequency = 0.022
fractal_lacunarity = 19.155
fractal_gain = 0.735

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8wt4r"]
width = 128
height = 128
color_ramp = SubResource("Gradient_mkupp")
noise = SubResource("FastNoiseLite_j5nwq")

[node name="inventory" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_s5fpq")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_ssgm0")

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Active Upgrades"
horizontal_alignment = 1

[node name="Inventory" type="GridContainer" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Available Upgrade"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "OK"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(244, 108)
color = Color(0.643137, 0.643137, 0.643137, 1)
texture = SubResource("NoiseTexture2D_8wt4r")
texture_scale = 4.4

[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_button_pressed"]
